# WorldSimulation

./: CMakeLists.txt  main.cpp
GUI/: GUI.cpp  GUI.h
Organisms/: Organism.cpp  Organism.h  UltHandler.cpp  UltHandler.h
Organisms/Animals/: Animal.cpp  Animal.h  Antelope.cpp  Antelope.h  Fox.cpp  Fox.h  Human.cpp  Human.h  Sheep.cpp  Sheep.h  Turtle.cpp  Turtle.h  Wolf.cpp  Wolf.h
Organisms/Plants/: Dandelion.cpp  Dandelion.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  Plant.cpp  Plant.h  SosnowskyBorscht.cpp  SosnowskyBorscht.h  Wolfberries.cpp  Wolfberries.h
Utilities/: Console.h  Includes.h  Point.cpp  Point.h  Random.h  Utils.h
World/: Board.h  FileParser.cpp  FileParser.h  InputParser.cpp  InputParser.h  World.cpp  World.h
